--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,16 @@ font-style: normal;
 font-weight: 600;
 line-height: normal;
 }
+
+
+.side-redes:active .fill-icon{
+  fill: #FFF;
+}
+
+
+
+
+
+
+
+
