--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body{
   background-color: #f9f9f9;
+}
+
+/* Aplica al contenedor con overflow-y-auto */
+.hide-scrollbar {
+  overflow-y: auto;
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Para navegadores basados en WebKit (Chrome, Safari, Edge) */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome/Safari */
 }
 
 .login{
@@ -71,6 +83,42 @@ line-height: normal;
 .side-redes:active .fill-icon{
   fill: #FFF;
 }
+
+
+
+
+
+.ck-editor__editable {
+  border: none !important;
+  box-shadow: none !important;
+}
+
+
+
+.main-container {
+	font-family: 'Lato';
+	width: 100%;
+  height: 583px;
+  max-height: 583px;
+	margin-left: auto;
+	margin-right: auto;
+  overflow-y: scroll;
+  flex: 1;
+  
+}
+
+.ck-content {
+	font-family: 'Lato';
+	line-height: 1.6;
+	word-break: break-word;
+}
+
+
+
+
+
+
+
 
 
 
