add component Contenido

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,6 +111,15 @@ line-height: normal;
 	word-break: break-word;
 }
 
+.logout:hover .svg-logout {
+  fill: #4045FF;
+  cursor: pointer;
+  
+}
+
+
+
+
 
 
 
