add relacion entre proyecto y producto + validacion si no tiene

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,14 @@ line-height: normal;
   
 }
 
+.label {
+  @apply  text-softgray-light font-medium text-sm opacity-80;
+}
+
+.title {
+  @apply  text-DarkOcean font-semibold text-lg;
+}
+
 
 
 
